src/objects/Feature_Widget_Settings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Add_On_Fields__c</fullName>
        <label>Add On Fields</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Custom_Object_Fields__c</fullName>
        <label>Custom Object Fields</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Custom_Object__c</fullName>
        <label>Custom Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Feature_Fields__c</fullName>
        <label>Feature Fields</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Feature Widget Settings</label>
</CustomObject>